# exp-sdl-dx11

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_ci.yml  build_ci.yml.ignore  build_cmake.yml  build_releases.yml
cmake/: artefacts.cmake  assets.cmake  publish.cmake  sdl.cmake  sources.cmake
src/experiment/: CMakeLists.txt  experiment.cpp  experiment.h  main.cpp
src/version/: CMakeLists.txt  generate_git_version.py
util/: create_release_zip.py  create_release_zip_test.bat  package_zip.py  package_zip_test.bat
